# OpticksTest

./: CMakeLists.txt  Makefile  cmake_install.cmake  env.txt  exampleB1.cc  run1.mac
Analysis/: Opticks.ipynb
Analysis/.ipynb_checkpoints/: Opticks-checkpoint.ipynb
include/: DetectorConstruction.hh  SellmeierEquation.h  SensorHit.h  SensorSD.h  SteppingAction.hh
src/: DetectorConstruction.cc  EventAction.cc  OpticalMaterialProperties.cc  PhotonHit.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensorHit.cc  SensorSD.cc  SteppingAction.cc
